# betterblocker

./: .gitignore  Cargo.toml  README.md  package.json  playwright.config.ts  tsconfig.json
.github/workflows/: ci.yml  release.yml
bench/: bench.ts  bench_realistic.ts  perf-budget.ts  test-urls.ts
crates/bb-cli/: Cargo.toml
crates/bb-cli/src/: bench.rs  e2e.rs  main.rs  perf_budget.rs  snapshot.rs  stress_hosts.rs  ts_types.rs
crates/bb-compiler/: Cargo.toml
crates/bb-compiler/src/: builder.rs  lib.rs  optimizer.rs  parser.rs
crates/bb-core/: Cargo.toml
crates/bb-core/src/: hash.rs  lib.rs  matcher.rs  psl.rs  types.rs  url.rs
crates/bb-core/src/snapshot/: format.rs  loader.rs  mod.rs
crates/bb-wasm/: Cargo.toml
crates/bb-wasm/src/: lib.rs
docs/: IMPLEMENTATION_PLAN.md  authoritative_spec_sheet.md  def.md
e2e/: fixtures.ts  smoke.spec.ts
extension/: manifest.json
extension/options/: options.css  options.html
extension/popup/: popup.css  popup.html
extension/resources/redirects/: noop.js
extension/resources/scriptlets/: registry.js
src/bg/: main.ts  matcher.ts  snapshot-store.ts  trace.ts  url-utils.ts
src/cs/: bootstrap.ts  scriptlets.ts
src/options/: options.ts
src/popup/: popup.ts
src/shared/: hash.ts  messaging.ts  psl.ts  types.ts
src/shared/snapshot/: format.ts  loader.ts
stress/: generate-hosts.js  index.html
testdata/: test-filters.txt
tests/: hash.test.ts
