[workspace]
resolver = "2"
members = [
    "crates/bb-core",
    "crates/bb-compiler",
    "crates/bb-wasm",
    "crates/bb-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/example/betterblocker"

[workspace.dependencies]
# Core dependencies
thiserror = "1.0"
log = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = "11.1"

# Hashing
twox-hash = "1.6"  # xxHash implementation

# PSL
publicsuffix = "2.2"

# Wasm
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
thirtyfour = { version = "0.36", default-features = false, features = ["rustls-tls"] }

# Testing
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.release-wasm]
inherits = "release"
# Optimize for size in wasm
opt-level = "z"
