[package]
name = "bb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for BetterBlocker"

[[bin]]
name = "bb-cli"
path = "src/main.rs"

[dependencies]
bb-core = { path = "../bb-core" }
bb-compiler = { path = "../bb-compiler" }
clap.workspace = true
tokio.workspace = true
reqwest.workspace = true
