[package]
name = "bb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for BetterBlocker"

[[bin]]
name = "bb-cli"
path = "src/main.rs"

[dependencies]
bb-core = { path = "../bb-core" }
bb-compiler = { path = "../bb-compiler" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
ts-rs.workspace = true
thirtyfour = { workspace = true, optional = true }
tokio.workspace = true

[features]
default = []
e2e = ["thirtyfour"]
