[package]
name = "bb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core matching engine for BetterBlocker content blocker"

[features]
default = ["std"]
std = []
# no_std support for embedded use
# alloc = []

[dependencies]
thiserror.workspace = true
log.workspace = true
bitflags = "2.4"

[dev-dependencies]
criterion.workspace = true

# [[bench]]
# name = "matching"
# harness = false
