[package]
name = "bb-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for BetterBlocker"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
 bb-core = { path = "../bb-core" }
 bb-compiler = { path = "../bb-compiler" }
 wasm-bindgen.workspace = true
 js-sys.workspace = true
 web-sys.workspace = true


[dev-dependencies]
wasm-bindgen-test = "0.3"
